--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Arrays and loops</title>
+    <title>Todo List</title>
 </head>
 <body>
     <div class="container">
-        <h1>Todo list practice</h1>
+        <h1>Todo list</h1>
         <div class="todo-info">
             <input class="input-text js-input" type="text" placeholder="Enter your todo list...">
             <input class="input-date js-input" type="date">
